# fred-db

./: .gitignore  AUTHORS  CHANGELOG.rst  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.rst  UPGRADE  aclocal.m4  action.sql  admin.sql  authinfo.sql  bank.sql  ccreg.sql  configure  configure.ac  createdb.sh  createdb.sh.in  credit.sql  drop.sql  enum_bank_code.sql  enum_country.sql  enum_cs_country.sql  enum_reason.sql  enum_ssntype.sql  enum_status.sql  error.sql  filemanager.sql  fred-db.spec.in  fred-dbmanager.in  func.sql  genzone.sql  history.sql  info_buffer.sql  invoice.sql  login.sql  mail_notify.sql  mail_templates.sql  (+10 more)
benchmark/: bench.conf  benchmark.txt  clear.sql  clear_oracle.sql  dummy_test.py  executor.py  generator.py  myrand.py  ora_test.py  pg_test.py  primitive.py  setup_db.sql  setup_oracle_db.sql  sql.py  test.py
check/: README  invoice_balance.sql  invoice_credit.sql  invoice_op_billed.sql  invoice_op_count.sql
contrib/fedora/: Makefile  fred-db.spec
sql/: action.sql  admin.sql  admin_contact_verification_ddl.sql  admin_contact_verification_dml.sql  array_util_func.sql  authinfo.sql  bank.sql  bank_ddl_new.sql  bank_new.sql  ccreg.sql  certification_file_dml.sql  contact_identity.sql  contact_verification_dml.sql  create_parts.sql  credit.sql  credit_ddl.sql  credit_dml.sql  domain_lifecycle_parameters.sql  drop.sql  enable_trigger.sql  enum_bank_code.sql  enum_country.sql  enum_cs_country.sql  enum_domain_name_validation_checker_dml.sql  enum_params.sql  enum_reason.sql  enum_ssntype.sql  enum_status.sql  enum_tlds.sql  epp_login.sql  error.sql  filemanager.sql  filters.sql  func.sql  genzone.sql  history.sql  history_base.sql  info_buffer.sql  invoice.sql  keyset.sql  (+52 more)
sql/_defaults/mail_archive/: mail_header_default.sql  mail_template_akm_candidate_state_ko.sql  mail_template_akm_candidate_state_ok.sql  mail_template_akm_keyset_update.sql  mail_template_annual_contact_reminder.sql  mail_template_conditional_contact_identification.sql  mail_template_contact_identification.sql  mail_template_default.sql  mail_template_expiration_dns_owner.sql  mail_template_expiration_dns_tech.sql  mail_template_expiration_dns_warning_owner.sql  mail_template_expiration_notify.sql  mail_template_expiration_register_owner.sql  mail_template_expiration_register_tech.sql  mail_template_expiration_validation.sql  mail_template_expiration_validation_before.sql  mail_template_footer.sql  mail_template_invoice_audit.sql  mail_template_invoice_deposit.sql  mail_template_invoice_noaudit.sql  mail_template_merge_contacts_auto.sql  mail_template_mojeid_email_change.sql  mail_template_mojeid_identification.sql  mail_template_mojeid_validation.sql  mail_template_mojeid_verified_contact_transfer.sql  mail_template_notification_create.sql  mail_template_notification_delete.sql  mail_template_notification_renew.sql  mail_template_notification_transfer.sql  mail_template_notification_unused.sql  mail_template_notification_update.sql  mail_template_record_statement.sql  mail_template_request_block.sql  mail_template_sendauthinfo_epp.sql  mail_template_sendauthinfo_pif.sql  mail_template_sendpersonalinfo_pif.sql  mail_template_techcheck.sql  mail_type_priority.sql  mail_vcard.sql
sql/mail_archive/: mail_archive_schema.sql  mail_type_admin_contact_verification.sql  mail_type_akm.sql  mail_type_authinfo.sql  mail_type_contact_merge.sql  mail_type_contact_reminder.sql  mail_type_contact_verification.sql  mail_type_expiration.sql  mail_type_invoice.sql  mail_type_mojeid.sql  mail_type_notification.sql  mail_type_personalinfo.sql  mail_type_public_request.sql  mail_type_record_statement.sql  mail_type_techcheck.sql
upgrades/: 1_7_1-1_8.sql  1_8-1_8_1.sql  1_8_1-1_8_2.sql  1_8_2-1_9_0.sql  1_9_0-1_9_1.sql  1_9_0-2_0_0.sql  1_9_1-1_9_2.sql  2.10.0-2.11.0-02-dml.sql  2.11.2-2.11.3-dml.sql  2.11.3-2.12.0-01-ddl.sql  2.11.3-2.12.0-02-dml.sql  2.11.3-2.12.0-03-ddl.sql  2.11.3-2.12.0-logger-dml.sql  2.12.0-2.12.1-dml.sql  2.12.1-2.12.2-dml.sql  2.12.2-2.13.0-01-ddl.sql  2.12.2-2.13.0-02-dml.sql  2.12.2-2.13.0-03-ddl.sql  2.12.2-2.13.0-logger-dml.sql  2.13.0-2.14.0-ddl.sql  2.13.0-2.14.0-dml.sql  2.13.0-2.14.0-logger-dml.sql  2.14.1-2.14.2-dml.sql  2.14.2-2.14.3-ddl.sql  2.14.3-2.14.4-dml.sql  2.14.3-2.15.0-dml.sql  2.14.4-2.15.0-ddl.sql  2.14.4-2.15.0-logger-ddl.sql  2.14.4-2.15.0-logger-dml.sql  2.15.0-2.16.0-ddl.sql  2.15.0-2.16.0-dml.sql  2.15.0-2.16.0-logger-dml.sql  2.16.0-2.17.0-ddl.sql  2.16.0-2.17.0-dml.sql  2.16.0-2.17.0-logger-dml.sql  2.17.0-2.18.0-data-fix-mojeid-upid.sql  2.17.0-2.18.0-logger-dml.sql  2.17.0-2.18.0.sql  2.18.0-2.18.1.sql  2.18.0-2.19.0-logger-dml.sql  (+364 more)
upgrades/messenger_migration/: 001_mail_template_messenger_migration_table.sql  005_message_archive_uuid_column.sh  006_message_archive_moddate_index.sql  007_indexes.sql  mail_template_messenger_migration_data.csv
upgrades/request_object_id_migration/: 01_before_update.sql  02_update.conf.example  02_update.sh  03_after_update.sql
